--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,16 @@ a {
   color: black;
 }
 
+// html,
+// body,
+// #root,
+// .directory {
+//   width: 100%;
+//   height: 100%;
+//   margin: 0 auto;
+//   padding: 0 auto;
+// }
+
 * {
   box-sizing: border-box;
 }
